# ags-service-publisher

./: .gitignore  MANIFEST.in  README.md  ags_utils.py  config_io.py  datasources.py  extrafilters.py  helpers.py  logging_io.py  mplog.py  publisher.py  requirements.txt  runner.py  sddraft_io.py  setup.cfg  setup.py
ags_service_publisher/: ags_utils.py  config_io.py  datasources.py  extrafilters.py  helpers.py  logging_io.py  mplog.py  publisher.py  publishing.py  reports.py  runner.py  sddraft_io.py  services.py
ags_service_publisher/reporters/: __init__.py  base_reporter.py  data_stores_reporter.py  dataset_geometry_statistics_reporter.py  dataset_usages_reporter.py  map_data_sources_reporter.py  mxd_data_sources_reporter.py  service_analysis_reporter.py  service_comparison_reporter.py  service_health_reporter.py  service_inventory_reporter.py  service_layer_fields_reporter.py  service_publishing_reporter.py
ags_service_publisher/resources/arcgis/projects/blank/: blank.aprx
