[metadata]
name = ags-service-publisher
summary = Tools for publishing and managing services on ArcGIS Server
url = https://github.com/cityofaustin/ags-service-publisher
license = CC0
author = Logan Pugh
author_email = logan.pugh@austintexas.gov

[files]
packages =
    ags_service_publisher
    ags_service_publisher.reporters
